# Prismarine

./: .env  .gitignore  Cargo.toml  README.md
.github/: FUNDING.yml
.github/workflows/: build.yml
src/: error.rs  main.rs  models.rs  project.rs  utils.rs  version.rs
